fix: 리뷰 반영 및 등록 예외 정책 보강